[gd_scene load_steps=7 format=3 uid="uid://x5bm6p1kbqdo"]

[ext_resource type="Script" uid="uid://c3eufa4vikbsj" path="res://scripts/gates/HalfAdder.gd" id="1_pildb"]
[ext_resource type="Texture2D" uid="uid://dn3i6rk1lhji5" path="res://assets/hsum.png" id="2_7cvur"]
[ext_resource type="Texture2D" uid="uid://dc46a6uh4xfef" path="res://assets/point.png" id="3_s2po7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ca8q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fnncx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4r5bu"]

[node name="HalfAdder" type="Node2D"]
script = ExtResource("1_pildb")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 4
texture = ExtResource("2_7cvur")

[node name="Input1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input1"]
position = Vector2(-40, -20)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_0ca8q")

[node name="Sprite2D" type="Sprite2D" parent="Input1"]
position = Vector2(-38, -21)
texture = ExtResource("3_s2po7")

[node name="Input2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input2"]
position = Vector2(-39, 17)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_0ca8q")

[node name="Sprite2D" type="Sprite2D" parent="Input2"]
position = Vector2(-37, 16)
texture = ExtResource("3_s2po7")

[node name="OutputSum" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputSum"]
position = Vector2(40, -20)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_fnncx")

[node name="Sprite2D" type="Sprite2D" parent="OutputSum"]
position = Vector2(41, -21)
texture = ExtResource("3_s2po7")

[node name="OutputCarry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputCarry"]
position = Vector2(40, 17)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_4r5bu")

[node name="Sprite2D" type="Sprite2D" parent="OutputCarry"]
position = Vector2(42, 16)
texture = ExtResource("3_s2po7")
